fix: fix jumping description of each job offer when collapsing,
fixes https://github.com/nextcloud/nextcloud.com#493

--- a/assets/css/legacy-fixes.css
+++ b/assets/css/legacy-fixes.css
@@ -1,2 +1,1 @@
-html{margin-top:0 !important}footer p{padding:0 !important;padding-top:20px !important}.navbar:not(.scrolled) .btn-primary{border-color:white}@media (max-width: 1200px){.Header-Navigation .navbar .overlay-menu ul .btn-primary a{padding:0 !important}}
-/*# sourceMappingURL=legacy-fixes.css.map */
+html{margin-top:0 !important}footer p{padding:0 !important;padding-top:20px !important}.navbar:not(.scrolled) .btn-primary{border-color:#fff}.collapse.in p:first-child,.collapsing p:first-child{margin:0}@media(max-width: 1200px){.Header-Navigation .navbar .overlay-menu ul .btn-primary a{padding:0 !important}}/*# sourceMappingURL=legacy-fixes.css.map */
